5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1593_1804.log
== TEST (2019-03-28 19:26:05) 
-- CODE:
a = float(input("digite Xa: "))
b = float(input("digite Ya: "))
c = float(input("digite Xb: "))
d = float(input("digite Yb: "))

dAB = sqrt((((c-a)**2)) + ((d-b)**2))

print(round(dAB, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dAB = sqrt((((c-a)**2)) + ((d-b)**2))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:26:54) 
-- CODE:
from math import*

a = float(input("digite Xa: "))
b = float(input("digite Ya: "))
c = float(input("digite Xb: "))
d = float(input("digite Yb: "))

dAB = sqrt((((c-a)**2)) + ((d-b)**2))

print(round(dAB, 3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 19:27:16) 
-- CODE:
from math import*

a = float(input("digite Xa: "))
b = float(input("digite Ya: "))
c = float(input("digite Xb: "))
d = float(input("digite Yb: "))

dAB = sqrt((((c-a)**2)) + ((d-b)**2))

print(round(dAB, 3))
-- EXECUTION TIME:
0.175924
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
